[gd_scene load_steps=28 format=2]

[ext_resource path="res://Cenas/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_walk_1.tres" type="Texture" id=2]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_jump_1.tres" type="Texture" id=3]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_idle.tres" type="Texture" id=4]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_jump_0.tres" type="Texture" id=5]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_walk_0.tres" type="Texture" id=6]
[ext_resource path="res://Assets Mario/sounds/smw_jump.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets Mario/AtlasTexture/morte2.tres" type="Texture" id=8]
[ext_resource path="res://Assets Mario/AtlasTexture/morte.tres" type="Texture" id=9]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_jump_big_0.tres" type="Texture" id=10]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_idle_big.tres" type="Texture" id=11]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_walk_big_0.tres" type="Texture" id=12]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_walk_big_1.tres" type="Texture" id=13]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_jump_big_1.tres" type="Texture" id=14]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_walk_big_2.tres" type="Texture" id=15]
[ext_resource path="res://Assets Mario/sounds/smw_stomp.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets Mario/sounds/smw_break_block.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets Mario/sounds/smw_coin.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets Mario/sounds/smw_pipe.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets Mario/sounds/smw_power-up.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets Mario/sounds/01. Ground Theme.mp3" type="AudioStream" id=21]
[ext_resource path="res://Assets Mario/sounds/smw_lost_a_life.wav" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "fall_big",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "idle",
"speed": 60.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "idle_big",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ) ],
"loop": false,
"name": "jump_big",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 14.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk_big",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 16.5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Animacao:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "invencivel"
tracks/0/type = "value"
tracks/0/path = NodePath("Animacao:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "morte"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animacao:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animacao:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -44 ), Vector2( 0, 500 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Animacao" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "fall_big"

[node name="Colisao" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 5 )

[node name="AudioPulo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = -20000
limit_top = -50
limit_right = 150000
limit_bottom = 600

[node name="Notificador" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/invencivel = SubResource( 6 )
anims/morte = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.27

[node name="Invencivel" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="BreakBlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="pisei" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="PegarMoeda" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="morte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="powerUP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="powerDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 4.0

[node name="AudioTema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[connection signal="morreu" from="." to="." method="_on_Player_morreu"]
[connection signal="screen_exited" from="Notificador" to="." method="_on_Notificador_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Invencivel" to="." method="_on_Invencivel_timeout"]
